fixed line-height and letter-spacing units

--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,7 @@ body{
 
 .nav-contact{
     font-size: 16px;
-    line-height: 24px;
+    line-height: 1.5;
     letter-spacing: 0.02em; 
     color: #434455;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
@@ -137,7 +137,7 @@ body{
     font-family: inherit;
     font-size: 16px;
     font-weight: 500;
-    line-height: 24px;
+    line-height: 1.5;
     letter-spacing: 0.04em;
     color: #FFFFFF;
     padding: 16px 32px;
@@ -214,7 +214,6 @@ body{
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    letter-spacing: 0.02em;
     color: #434455;
 }
 .team-description{
@@ -223,7 +222,7 @@ body{
 }
 .summary{
     font-size: 16px;
-    line-height: 24px;
+    line-height: 1.5;
     letter-spacing: 0.02em;
     color: #F4F4FD;
     width: 264px;
@@ -271,6 +270,7 @@ body{
 }
 
 .customers-section {
+    padding-top: 120px;
     padding-bottom: 120px;
 }
 .footer{
@@ -310,6 +310,7 @@ body{
 .team-section{
     background-color: #F4F4FD;
     background: var(--cloud);
+    padding-top: 120px;
     padding-bottom: 120px;
 }
 .team-item{
@@ -405,8 +406,7 @@ body{
     margin-top: 72px; 
        
 }
-.team-container{
-    padding: 32px 0;
+.team-container{    
 }
 .team-header{
     text-align: center;
@@ -439,7 +439,6 @@ body{
 }
 .footer-container {
     display: flex;
-    gap: 80px;
     align-items: baseline;
     justify-content: space-between;
     flex-shrink: 0;
@@ -453,8 +452,8 @@ body{
     color: white;
     font-size: 16px;
     font-weight: 500;
-    line-height: 24px;
-    letter-spacing: 0.32px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
     margin-bottom: 16px;
 }
 
@@ -486,8 +485,8 @@ body{
     color: var(--white, #FFF);
     font-size: 16px;
     font-weight: 500;
-    line-height: 24px;
-    letter-spacing: 0.32px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
     margin-bottom: 16px;
 }
 .footer-subscribe-input {
@@ -500,7 +499,7 @@ body{
     color: var(--white, #FFF);
     font-size: 12px;
     line-height: 1.5;
-    letter-spacing: 0.48px;
+    letter-spacing: 0.03em;
     padding: 8px 16px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 }
@@ -512,7 +511,6 @@ body{
     padding: 8px 24px;
     justify-content: center;
     align-items: center;
-    gap: 16px;
     border: none;
     border-radius: 4px;
     background: var(--iris, #4D5AE5);
@@ -520,8 +518,8 @@ body{
     text-align: center;
     font-size: 16px;
     font-weight: 500;
-    line-height: 24px;
-    letter-spacing: 0.64px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
     transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
@@ -631,8 +629,8 @@ body{
 .modal-input{
     color: var(--navyblue-modal, rgba(46, 47, 66, 0.40));
     font-size: 12px;
-    line-height: 14px;
-    letter-spacing: 0.48px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
     width: 100%;
     height: 40px;
     padding: 11px 38px;
@@ -652,8 +650,8 @@ body{
     color: var(--lightslate, #8E8F99); 
     /* Small Text */
     font-size: 12px;
-    line-height: 14px;
-    letter-spacing: 0.48px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
     display: block;
     margin-bottom: 4px;
 }
@@ -673,7 +671,7 @@ body{
     color: var(--navyblue-modal, rgba(46, 47, 66, 0.40));
     line-height: 1.17;
     font-size: 12px;
-    letter-spacing: 0.48px;
+    letter-spacing: 0.04em;
     height: 120px;
     width: 100%;
     border-radius: 4px;
@@ -731,12 +729,11 @@ body{
 .modal-accept-text {
     color: #8E8F99;
     font-size: 12px;
-    line-height: 14px;
-    letter-spacing: 0.48px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
     user-select: none;
 }
 .modal-link{
-    line-height: 16px;
     text-decoration-line: underline;
     color: var(--iris, #4D5AE5);
 }
@@ -821,8 +818,8 @@ input:not([type 'checkbox']),{
     height: 100%;
     font-size: 16px;
     font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0.32px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
     position: absolute;
     top: 0;
     left: 0;
